# EasyDB

./: .gitignore  CMakeLists.txt  README.md  db.go  go.mod  makefile
Docs/: 开发日志.md  数据库.md
Holo_db/: Holo_db.sln
Holo_db/Holo_db/: Holo_db.vcxproj  Holo_db.vcxproj.filters  commonds_def.h  commonfunc.h  config.h  display_msg.cpp  display_msg.h  hldb_log.cpp  hldb_log.h  hldb_lru.h  hldb_singal_solt.h  hldb_test.h  keywords_def.h  log.cpp  log.h  main.cpp
Holo_db/Test/: Test.vcxproj  main_test.cpp
Module/HLDB/: CMakeLists.txt
Module/HLDB/src/: commonds_def.h  commonfunc.h  config.h  display_msg.cpp  display_msg.h  hldb_log.cpp  hldb_lru.h  hldb_singal_solt.h  hldb_test.h  keywords_def.h  main.cpp
cmd/: main.go
compile_env/windows/: msvc.sln  msvc.vcxproj  msvc.vcxproj.filters
datafile/: dbfile.go  entry.go
src/: display_msg.cpp  display_msg.h  main.cpp
