# 将源代码添加到此项目的可执行文件。
add_executable (HLDB "src/commonds_def.h" "src/commonfunc.h" "src/keywords_def.h" "src/config.h" "src/hldb_lru.h" "src/hldb_singal_solt.h" "src/display_msg.h" "src/display_msg.cpp" "src/display_msg.h" "src/display_msg.cpp" "src/hldb_log.h" "src/hldb_log.cpp" "src/hldb_test.h" "src/main.cpp")
